crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_emit2.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_emit2), functions::parse_stmt,\n           \"emit Foo(1, 2, x: y)\")"

---
Node(
  kind: Emit(
    name: Node(
      kind: "Foo",
      span: Span(
        start: 5,
        end: 8,
      ),
    ),
    args: Node(
      kind: [
        Node(
          kind: CallArg(
            label: None,
            value: Node(
              kind: Num("1"),
              span: Span(
                start: 9,
                end: 10,
              ),
            ),
          ),
          span: Span(
            start: 9,
            end: 10,
          ),
        ),
        Node(
          kind: CallArg(
            label: None,
            value: Node(
              kind: Num("2"),
              span: Span(
                start: 12,
                end: 13,
              ),
            ),
          ),
          span: Span(
            start: 12,
            end: 13,
          ),
        ),
        Node(
          kind: CallArg(
            label: Some(Node(
              kind: "x",
              span: Span(
                start: 15,
                end: 16,
              ),
            )),
            value: Node(
              kind: Name("y"),
              span: Span(
                start: 18,
                end: 19,
              ),
            ),
          ),
          span: Span(
            start: 15,
            end: 19,
          ),
        ),
      ],
      span: Span(
        start: 8,
        end: 20,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 20,
  ),
)
