crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_if2.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_if2), functions::parse_stmt,\n           \"if a:\\n b \\nelif c:\\n d \\nelif e: \\n f \\nelse:\\n g\")"

---
Node(
  kind: If(
    test: Node(
      kind: Name("a"),
      span: Span(
        start: 3,
        end: 4,
      ),
    ),
    body: [
      Node(
        kind: Expr(
          value: Node(
            kind: Name("b"),
            span: Span(
              start: 7,
              end: 8,
            ),
          ),
        ),
        span: Span(
          start: 7,
          end: 8,
        ),
      ),
    ],
    or_else: [
      Node(
        kind: If(
          test: Node(
            kind: Name("c"),
            span: Span(
              start: 15,
              end: 16,
            ),
          ),
          body: [
            Node(
              kind: Expr(
                value: Node(
                  kind: Name("d"),
                  span: Span(
                    start: 19,
                    end: 20,
                  ),
                ),
              ),
              span: Span(
                start: 19,
                end: 20,
              ),
            ),
          ],
          or_else: [
            Node(
              kind: If(
                test: Node(
                  kind: Name("e"),
                  span: Span(
                    start: 27,
                    end: 28,
                  ),
                ),
                body: [
                  Node(
                    kind: Expr(
                      value: Node(
                        kind: Name("f"),
                        span: Span(
                          start: 32,
                          end: 33,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 32,
                      end: 33,
                    ),
                  ),
                ],
                or_else: [
                  Node(
                    kind: Expr(
                      value: Node(
                        kind: Name("g"),
                        span: Span(
                          start: 42,
                          end: 43,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 42,
                      end: 43,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 22,
                end: 43,
              ),
            ),
          ],
        ),
        span: Span(
          start: 10,
          end: 43,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 43,
  ),
)
