crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_match.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_match), functions::parse_stmt,\n    r#\"match my_enum {\n    MyEnum::Unit => {\n        return 0\n    }\n    MyEnum::Tuple(x, y) => {\n        let sum: i32 = x + y;\n        return sum\n    }\n    _ => {\n        return -1\n    }\n}\"#)"
---
Node(
  kind: Match(
    expr: Node(
      kind: Name("my_enum"),
      span: Span(
        start: 6,
        end: 13,
      ),
    ),
    arms: [
      Node(
        kind: MatchArm(
          pat: Node(
            kind: Path(Node(
              kind: Path(
                segments: [
                  Node(
                    kind: "MyEnum",
                    span: Span(
                      start: 20,
                      end: 26,
                    ),
                  ),
                  Node(
                    kind: "Unit",
                    span: Span(
                      start: 28,
                      end: 32,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 20,
                end: 32,
              ),
            )),
            span: Span(
              start: 20,
              end: 32,
            ),
          ),
          body: [
            Node(
              kind: Return(
                value: Some(Node(
                  kind: Num("0"),
                  span: Span(
                    start: 53,
                    end: 54,
                  ),
                )),
              ),
              span: Span(
                start: 46,
                end: 54,
              ),
            ),
          ],
        ),
        span: Span(
          start: 20,
          end: 60,
        ),
      ),
      Node(
        kind: MatchArm(
          pat: Node(
            kind: PathTuple(Node(
              kind: Path(
                segments: [
                  Node(
                    kind: "MyEnum",
                    span: Span(
                      start: 65,
                      end: 71,
                    ),
                  ),
                  Node(
                    kind: "Tuple",
                    span: Span(
                      start: 73,
                      end: 78,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 65,
                end: 78,
              ),
            ), [
              Node(
                kind: Path(Node(
                  kind: Path(
                    segments: [
                      Node(
                        kind: "x",
                        span: Span(
                          start: 79,
                          end: 80,
                        ),
                      ),
                    ],
                  ),
                  span: Span(
                    start: 79,
                    end: 80,
                  ),
                )),
                span: Span(
                  start: 79,
                  end: 80,
                ),
              ),
              Node(
                kind: Path(Node(
                  kind: Path(
                    segments: [
                      Node(
                        kind: "y",
                        span: Span(
                          start: 82,
                          end: 83,
                        ),
                      ),
                    ],
                  ),
                  span: Span(
                    start: 82,
                    end: 83,
                  ),
                )),
                span: Span(
                  start: 82,
                  end: 83,
                ),
              ),
            ]),
            span: Span(
              start: 65,
              end: 84,
            ),
          ),
          body: [
            Node(
              kind: VarDecl(
                target: Node(
                  kind: Name("sum"),
                  span: Span(
                    start: 102,
                    end: 105,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "i32",
                  ),
                  span: Span(
                    start: 107,
                    end: 110,
                  ),
                ),
                value: Some(Node(
                  kind: BinOperation(
                    left: Node(
                      kind: Name("x"),
                      span: Span(
                        start: 113,
                        end: 114,
                      ),
                    ),
                    op: Node(
                      kind: Add,
                      span: Span(
                        start: 115,
                        end: 116,
                      ),
                    ),
                    right: Node(
                      kind: Name("y"),
                      span: Span(
                        start: 117,
                        end: 118,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 113,
                    end: 118,
                  ),
                )),
              ),
              span: Span(
                start: 98,
                end: 118,
              ),
            ),
            Node(
              kind: Return(
                value: Some(Node(
                  kind: Name("sum"),
                  span: Span(
                    start: 135,
                    end: 138,
                  ),
                )),
              ),
              span: Span(
                start: 128,
                end: 138,
              ),
            ),
          ],
        ),
        span: Span(
          start: 65,
          end: 144,
        ),
      ),
      Node(
        kind: MatchArm(
          pat: Node(
            kind: WildCard,
            span: Span(
              start: 149,
              end: 150,
            ),
          ),
          body: [
            Node(
              kind: Return(
                value: Some(Node(
                  kind: UnaryOperation(
                    op: Node(
                      kind: USub,
                      span: Span(
                        start: 171,
                        end: 172,
                      ),
                    ),
                    operand: Node(
                      kind: Num("1"),
                      span: Span(
                        start: 172,
                        end: 173,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 171,
                    end: 173,
                  ),
                )),
              ),
              span: Span(
                start: 164,
                end: 173,
              ),
            ),
          ],
        ),
        span: Span(
          start: 149,
          end: 179,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 181,
  ),
)
