crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_match2.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_match2), functions::parse_stmt,\n    r#\"match my_enum {\n    MyEnum::Unit | MyEnum::Tuple(_, _) => {\n        return 0\n    }\n    _ => {\n        return -1\n    }\n}\"#)"
---
Node(
  kind: Match(
    expr: Node(
      kind: Name("my_enum"),
      span: Span(
        start: 6,
        end: 13,
      ),
    ),
    arms: [
      Node(
        kind: MatchArm(
          pat: Node(
            kind: Or([
              Node(
                kind: Path(Node(
                  kind: Path(
                    segments: [
                      Node(
                        kind: "MyEnum",
                        span: Span(
                          start: 20,
                          end: 26,
                        ),
                      ),
                      Node(
                        kind: "Unit",
                        span: Span(
                          start: 28,
                          end: 32,
                        ),
                      ),
                    ],
                  ),
                  span: Span(
                    start: 20,
                    end: 26,
                  ),
                )),
                span: Span(
                  start: 20,
                  end: 32,
                ),
              ),
              Node(
                kind: PathTuple(Node(
                  kind: Path(
                    segments: [
                      Node(
                        kind: "MyEnum",
                        span: Span(
                          start: 35,
                          end: 41,
                        ),
                      ),
                      Node(
                        kind: "Tuple",
                        span: Span(
                          start: 43,
                          end: 48,
                        ),
                      ),
                    ],
                  ),
                  span: Span(
                    start: 35,
                    end: 41,
                  ),
                ), [
                  Node(
                    kind: WildCard,
                    span: Span(
                      start: 49,
                      end: 50,
                    ),
                  ),
                  Node(
                    kind: WildCard,
                    span: Span(
                      start: 52,
                      end: 53,
                    ),
                  ),
                ]),
                span: Span(
                  start: 35,
                  end: 54,
                ),
              ),
            ]),
            span: Span(
              start: 20,
              end: 54,
            ),
          ),
          body: [
            Node(
              kind: Return(
                value: Some(Node(
                  kind: Num("0"),
                  span: Span(
                    start: 75,
                    end: 76,
                  ),
                )),
              ),
              span: Span(
                start: 68,
                end: 76,
              ),
            ),
          ],
        ),
        span: Span(
          start: 20,
          end: 82,
        ),
      ),
      Node(
        kind: MatchArm(
          pat: Node(
            kind: WildCard,
            span: Span(
              start: 87,
              end: 88,
            ),
          ),
          body: [
            Node(
              kind: Return(
                value: Some(Node(
                  kind: UnaryOperation(
                    op: Node(
                      kind: USub,
                      span: Span(
                        start: 109,
                        end: 110,
                      ),
                    ),
                    operand: Node(
                      kind: Num("1"),
                      span: Span(
                        start: 110,
                        end: 111,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 109,
                    end: 111,
                  ),
                )),
              ),
              span: Span(
                start: 102,
                end: 111,
              ),
            ),
          ],
        ),
        span: Span(
          start: 87,
          end: 117,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 119,
  ),
)
