crates/parser/tests/cases/snapshots/cases__parse_ast__stmt_return1.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(stmt_return1), functions::parse_stmt, \"return\")"

---
Node(
  kind: Return(
    value: None,
  ),
  span: Span(
    start: 0,
    end: 6,
  ),
)
